# static-mocks-good-bad-ugly

./: .gitignore  CMakeLists.txt
include/cool_car/: cool_car.h
include/gyroscope/: gyroscope.h
include/logger/: logger.h
include/odometer/: odometer.h
src/: cool_car.cpp  cool_car_main.cpp  gyroscope.cpp  logger.cpp  odometer.cpp
test/: CMakeLists.txt  car_test.cpp  cool_car_test.cpp
test/car/include/: Car.h
test/car/src/: Car.cpp
test/mocks/: MockDcMotor.cpp  MockDcMotor.h  mock_gyroscope.cpp  mock_gyroscope.h  mock_logger.cpp  mock_logger.h  mock_odometer.cpp  mock_odometer.h
test/motor/include/: DcMotor.h
test/motor/src/: DcMotor.cpp
